metadata1/unpackaged/objects/Schedule__c.object
<CustomObject>
    <fields>
        <fullName>ATI_Job__c</fullName>
        <label>ATI Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Appliances_Completion_Date__c</fullName>
        <label>Appliances Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appliances_Start_Date__c</fullName>
        <label>Appliances Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cabinetry_Completion_Date__c</fullName>
        <label>Cabinetry Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cabinetry_Start_Date__c</fullName>
        <label>Cabinetry Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cleaning_Completion_Date__c</fullName>
        <label>Cleaning Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cleaning_Start_Date__c</fullName>
        <label>Cleaning Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_PDF_Version__c</fullName>
        <label>Current_PDF_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doors_Completion_Date__c</fullName>
        <label>Doors Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doors_Start_Date__c</fullName>
        <label>Doors Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drywall_Completion_Date__c</fullName>
        <label>Drywall Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drywall_Start_Date__c</fullName>
        <label>Drywall Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Completion_Date__c</fullName>
        <label>Electrical Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Start_Date__c</fullName>
        <label>Electrical Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Completion_Date__c</fullName>
        <label>Final Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finish_Trim_Carpentry_Completion_Date__c</fullName>
        <label>Finish Trim/Carpentry Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finish_Trim_Carpentry_Start_Date__c</fullName>
        <label>Finish Trim/Carpentry Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floor_Covering_Completion_Date__c</fullName>
        <label>Floor Covering Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floor_Covering_Start_Date__c</fullName>
        <label>Floor Covering Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Framing_Rough_Carpentry_Completion_Date__c</fullName>
        <label>Framing/Rough Carpentry Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Framing_Rough_Carpentry_Start_Date__c</fullName>
        <label>Framing/Rough Carpentry Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Demolition_Completion_Date__c</fullName>
        <label>General Demolition Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Demolition_Start_Date__c</fullName>
        <label>General Demolition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Heat_Vent_A_C_Completion_Date__c</fullName>
        <label>Heat, Vent &amp; A/C Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Heat_Vent_A_C_Start_Date__c</fullName>
        <label>Heat, Vent &amp; A/C Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insulation_Completion_Date__c</fullName>
        <label>Insulation Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insulation_Start_Date__c</fullName>
        <label>Insulation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interior_Lath_Plaster_Completion_Date__c</fullName>
        <label>Interior Lath &amp; Plaster Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interior_Lath_Plaster_Start_Date__c</fullName>
        <label>Interior Lath &amp; Plaster Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Painting_Completion_Date__c</fullName>
        <label>Painting Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Painting_Start_Date__c</fullName>
        <label>Painting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <description>Project Director&apos;s full name, email and phone number.</description>
        <formula>ATI_Job__r.Project_Manager_Full_Name__c +BR()+ ATI_Job__r.Project_Manager__r.MobilePhone +BR()+ ATI_Job__r.Project_Manager_Email__c</formula>
        <label>Project Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <description>Project Manager&apos;s full name, Phone, and Email.</description>
        <formula>ATI_Job__r.Project_Manager_New_Full_Name__c +BR()+ 
ATI_Job__r.Super_Ops_Email__c +BR()+ 
ATI_Job__r.Super_Ops_Phone__c</formula>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Site_Address__c</fullName>
        <description>Pulls the Project site address from the job.</description>
        <formula>ATI_Job__r.Project_Site_Address__c +&quot; &quot;+ ATI_Job__r.Project_Site_Address_2__c +BR()+ ATI_Job__r.Project_Site_City__c +&quot;, &quot;+ ATI_Job__r.Project_Site_City__c  +&quot; &quot;+ ATI_Job__r.Project_Site_Zipcode__c</formula>
        <label>Project Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roofing_Completion_Date__c</fullName>
        <label>Roofing Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roofing_Start_Date__c</fullName>
        <label>Roofing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Number_Incremental__c</fullName>
        <label>Schedule Number Incremental</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stucco_Exterior_Plaster_Completion_Date__c</fullName>
        <label>Stucco/Exterior Plaster Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stucco_Exterior_Plaster_Start_Date__c</fullName>
        <label>Stucco/Exterior Plaster Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wallpaper_Completion_Date__c</fullName>
        <label>Wallpaper Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wallpaper_Start_Date__c</fullName>
        <label>Wallpaper Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Windows_Completion_Date__c</fullName>
        <label>Windows Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Windows_Start_Date__c</fullName>
        <label>Windows Start Date</label>
        <type>Date</type>
    </fields>
    <label>Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>